--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Talks</string>
+    <string name="app_name" translatable="false">Talks</string>
+    <string name="real_name">Name</string>
+    <string name="real_surname">Surname</string>
+    <string name="password">Password</string>
+    <string name="email_address">E-mail address</string>
+    <string name="nickname">Nickname</string>
+    <string name="join_now">Join Talks now!</string>
+    <string name="login">Login</string>
 </resources>
