--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Talks</string>
-    <string name="nickname">Apodo</string>
-    <string name="email_address">Correo electronico</string>
-    <string name="password">ContraseÃ±a</string>
+    <string name="app_name" translatable="false">Talks</string>
     <string name="real_name">Nombre</string>
-    <string name="real_surname">Cognomo</string>
+    <string name="real_surname">Apellido</string>
+    <string name="password">Contraseña</string>
+    <string name="email_address">Dirección de correo electrónico</string>
+    <string name="nickname">Apodo</string>
+    <string name="join_now">¡Únete a las conversaciones ahora!</string>
+    <string name="login">Acceso</string>
 </resources>
