--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Talks</string>
+    <string name="app_name" translatable="false">Talks</string>
     <string name="real_name">Nome</string>
     <string name="real_surname">Cognome</string>
-    <string name="password">Password</string>
-    <string name="email_address">Indirizzo posta elettronica</string>
-    <string name="nickname">Nickname</string>
+    <string name="password">Parola d'ordine</string>
+    <string name="email_address">Indirizzo e-mail</string>
+    <string name="nickname">Soprannome</string>
+    <string name="join_now">Iscriviti a parlare ora!</string>
+    <string name="login">Login</string>
 </resources>
