--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="sign_up">SIGN-UP</string>
 
     <string name="invalidEmail">Invalid email</string>
+    <string name="button">Button</string>
+    <string name="talks">Talks</string>
+    <string name="textview">TextView</string>
 </resources>
