--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- APP NAME -->
     <string name="app_name" translatable="false">Talks</string>
+
+    <!-- Stringhe Layout -->
     <string name="real_name">Name</string>
     <string name="real_surname">Surname</string>
-    <string name="login_password">Password</string>
-    <string name="password">Password (min 6 characters)</string>
     <string name="email_address">E-mail address</string>
+    <string name="password">Password (min 6 characters)</string>
     <string name="nickname">Nickname</string>
+    <string name="login_password">Password</string>
     <string name="join_now">Don\'t have an account? Join Talks now!</string>
     <string name="login">Login</string>
     <string name="signin">SIGN-IN</string>
-    <string name="immagine_schermata_login" translatable="false">login_image</string>
     <string name="sign_up">SIGN-UP</string>
+    <string name="newPost">NEW POST</string>
+    <string name="submit">SUBMIT</string>
 
+    <!-- Stringhe Toast -->
+    <string name="talkSent">Talk successfully sent</string>
+    <string name="loginOK">Access allowed</string>
+    <string name="loginKO">Access denied</string>
+    <string name="SignInOK">User successfully registered</string>
+    <string name="SignInKO">Unable to register user</string>
+    <string name="logOut">LOGOUT</string>
+
+    <!-- Stringhe Error -->
     <string name="invalidEmail">Invalid email</string>
+    <string name="invalidTalkLength">Warning, the talk must be at least 4 characters</string>
+    <string name="minChar">minimum: $ characters</string>
+    <string name="maxChar">maximum: $ characters</string>
+
+    <!-- Stringhe -->
+    <string name="immagine_schermata_login" translatable="false">login_image</string>
     <string name="button">Button</string>
-    <string name="talks">Talks</string>
     <string name="textview">TextView</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
