--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="sign_up">SIGN-UP</string>
     <string name="newPost">NEW TALK</string>
     <string name="submit">SUBMIT</string>
+    <string name="tNickanme">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
+    <string name="tContent">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
 
     <!-- Stringhe Toast -->
     <string name="talkSent">Talk successfully sent</string>
@@ -32,14 +34,17 @@
 
     <!-- Stringhe Error -->
     <string name="invalidEmail">Invalid email</string>
-    <string name="talkTooShort">Warning, the talk must be at least 4 characters</string>
-    <string name="talkTooLong">Warning, the talk limit is 280 characters</string>
+    <string name="talkTooShort">Warning, the talk must be at least $ characters</string>
+    <string name="talkTooLong">Warning, the talk limit is $ characters</string>
     <string name="minChar">minimum: $ characters</string>
     <string name="maxChar">maximum: $ characters</string>
+    <string name="duplicateNickname">nickname: $ already registered</string>
 
     <!-- Stringhe -->
     <string name="immagine_schermata_login" translatable="false">login_image</string>
+    <string name="immagine_schermata_profilo" translatable="false">profile_image</string>
     <string name="button">Button</string>
     <string name="textview">TextView</string>
+
 
 </resources>
