--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,16 +12,18 @@
     <string name="login_password">Password</string>
     <string name="join_now_1">Don\'t have an account?</string>
     <string name="join_now_2">Join Talks now!</string>
-    <string name="talkHint">Insert here your Talk message</string>
-    <string name="linkHint">Insert here the Source</string>
-    <string name="login">LOG-IN</string>
-    <string name="signin">SIGN-IN</string>
+    <string name="talk_hint">Insert here your Talk message</string>
+    <string name="link_hint">Insert here the Source</string>
+    <string name="log_in">LOG-IN</string>
+    <string name="sign_in">SIGN-IN</string>
     <string name="sign_up">SIGN-UP</string>
-    <string name="newPost">NEW TALK</string>
+    <string name="new_post">NEW TALK</string>
     <string name="submit">SUBMIT</string>
-    <string name="tNickanme">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
-    <string name="tContent">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
-    <string name="inserImageHere">INSERT\nIMAGE\nHERE</string>
+    <string name="template_nickname">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
+    <string name="template_content">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
+    <string name="insert_image_here">INSERT\nIMAGE\nHERE</string>
+    <string name="search_user_hint">search user</string>
+
 
     <!-- Stringhe Toast -->
     <string name="talkSent">Talk successfully sent</string>
