--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,8 @@
     <string name="submit">SUBMIT</string>
     <string name="template_nickname">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
     <string name="template_content">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
-    <string name="insert_image_here">INSERT\nIMAGE\nHERE</string>
+    <string name="insert_image">INSERT\nIMAGE</string>
+    <string name="remove_image">REMOVE\nIMAGE</string>
     <string name="search_user_hint">search user</string>
 
 
@@ -33,6 +34,8 @@
     <string name="SignInKO">Unable to register user</string>
     <string name="ImageUpdated">Account picture successfully updated</string>
     <string name="ImageNotUpdated">Unable to update account picture</string>
+    <string name="ImageRemoved">Account picture successfully removed</string>
+    <string name="ImageNotRemoved">Unable to remove account picture</string>
     <string name="talkDeletedOK">Talk successfully removed</string>
     <string name="talkDeletedKO">Unable to remove selected Talk</string>
 
@@ -40,6 +43,7 @@
     <string name="switchToNight">Switch to Night Mode</string>
     <string name="switchToLight">Switch to Light Mode</string>
     <string name="changePicture">Change account picture</string>
+    <string name="removeAccountPicture">Remove account picture</string>
     <string name="logOut">LOGOUT</string>
 
     <!-- Stringhe Error -->
@@ -49,12 +53,12 @@
     <string name="minChar">minimum: $ characters</string>
     <string name="maxChar">maximum: $ characters</string>
     <string name="duplicateNickname">nickname: $ already registered</string>
+    <string name="notFound">"not found"</string>
 
     <!-- Stringhe -->
     <string name="immagine_schermata_login" translatable="false">login_image</string>
     <string name="immagine_schermata_profilo" translatable="false">profile_image</string>
     <string name="button">Button</string>
     <string name="textview">TextView</string>
-
-
+    <string name="profile_list_title">PROFILE LIST</string>
 </resources>
