--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="sign_up">SIGN-UP</string>
     <string name="new_post">NEW TALK</string>
     <string name="submit">SUBMIT</string>
-    <string name="template_nickname">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
-    <string name="template_content">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
+    <string name="template_nickname" translatable="false">template-nickname</string> <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
+    <string name="template_content" translatable="false">template-content</string>   <!-- Usato solo in row-talk come template per la creazione dell'interfaccia grafica -->
     <string name="insert_image">INSERT\nIMAGE</string>
     <string name="remove_image">REMOVE\nIMAGE</string>
     <string name="search_user_hint">search user</string>
@@ -58,7 +58,7 @@
     <!-- Stringhe -->
     <string name="immagine_schermata_login" translatable="false">login_image</string>
     <string name="immagine_schermata_profilo" translatable="false">profile_image</string>
-    <string name="button">Button</string>
-    <string name="textview">TextView</string>
-    <string name="profile_list_title">PROFILE LIST</string>
+    <string name="button" translatable="false">Button</string>
+    <string name="textview" translatable="false">TextView</string>
+    <string name="profile_list_title" translatable="false">PROFILE LIST</string>
 </resources>
